@@ -841,8 +841,9 @@ void MainWindow::getParameterValue(QString param, QString &value)
     }
 }
 
-void MainWindow::addToGroup(PExProjectNode* project, const QString& filepath)
+void MainWindow::addToGroup(PExGroupNode* group, const QString& filepath)
 {
+    PExProjectNode *project = group->assignedProject();
     openFileNode(mProjectRepo.findOrCreateFileNode(filepath, project), true);
 }
 
@@ -1047,6 +1048,7 @@ void MainWindow::continueAsyncCall()
             projects << val.value<PExProjectNode*>();
         }
         newFileDialog(projects,
+                      mAsyncCallOptions.value("path").toString(),
                       mAsyncCallOptions.value("solverName").toString(),
                       FileKind(mAsyncCallOptions.value("fileKind").toInt()));
     } else if (mAsyncCallOptions.contains("call")) {
@@ -1535,7 +1537,7 @@ void MainWindow::getAdvancedActions(QList<QAction*>* actions)
     *actions = act;
 }
 
-void MainWindow::newFileDialogPrepare(const QVector<PExProjectNode*> &projects, const QString& solverName, FileKind fileKind)
+void MainWindow::newFileDialogPrepare(const QVector<PExProjectNode*> &projects, const QString &inPath, const QString& solverName, FileKind fileKind)
 {
     mAsyncCallOptions.clear();
     mAsyncCallOptions.insert("call", "newFileDialog");
@@ -1546,21 +1548,22 @@ void MainWindow::newFileDialogPrepare(const QVector<PExProjectNode*> &projects, 
         pointerValues << v;
     }
     mAsyncCallOptions.insert("projects", pointerValues);
+    mAsyncCallOptions.insert("path", inPath);
     mAsyncCallOptions.insert("solverName", solverName);
     mAsyncCallOptions.insert("fileKind", int(fileKind));
     ensureWorkspace();
 }
 
-void MainWindow::newFileDialog(const QVector<PExProjectNode*> &projects, const QString& solverName, FileKind fileKind)
+void MainWindow::newFileDialog(const QVector<PExProjectNode*> &projects, const QString &inPath, const QString& solverName, FileKind fileKind)
 {
-    QString path;
+    QString path = inPath;
     bool projectOnly = fileKind == FileKind::Gsp;
     bool pfFileOnly = fileKind == FileKind::Pf;
     if (projectOnly) {
         path = mRecent.project() ? mRecent.project()->location() : CommonPaths::defaultWorkingDir();
     } else {
         if (!projects.isEmpty()) {
-            path = projects.constFirst()->workDir();
+            if (path.isEmpty()) path = projects.constFirst()->workDir();
         } else if (mRecent.editFileId() >= 0) {
             FileMeta *fm = mFileMetaRepo.fileMeta(mRecent.editFileId());
             if (fm) path = QFileInfo(fm->location()).path();
@@ -6318,7 +6321,7 @@ void MainWindow::on_actionMove_Line_Down_triggered()
 
 void MainWindow::on_actionNew_Project_triggered()
 {
-    newFileDialogPrepare(QVector<PExProjectNode*>(), "", FileKind::Gsp);
+    newFileDialogPrepare(QVector<PExProjectNode*>(), "", "", FileKind::Gsp);
 }
 
 void MainWindow::on_actionOpen_Project_triggered()
